--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img src="images/logo.png" alt="" width="290" height="39"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
