--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="#"
             ><img src="images/logo.png" alt="" width="290" height="39"
           /></a>
