--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/83d992fa51.js"
+      crossorigin="anonymous"
+    ></script>
     <!--Bootstrap CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -23,6 +28,7 @@
   </head>
   <body>
     <header>
+      <!-- Manu Section -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="#"
@@ -57,6 +63,30 @@
           </div>
         </div>
       </nav>
+      <!-- Banner Section -->
+      <section class="container">
+        <div
+          class="banner-section d-flex justify-content-between align-items-center"
+        >
+          <div class="banner-title">
+            <h1>
+              <span class="title-first-part">Be the Penguins</span> <br />
+              of Winter
+            </h1>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="btn btn-success panguin-btn">
+              <i class="fa-solid fa-cart-shopping"></i>
+              BUY NOW
+            </div>
+          </div>
+          <div class="banner-photo">
+            <img src="images/model.png" alt="" />
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
 
