Defiend header section bg color

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="header-section">
       <!-- Manu Section -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#"
             ><img src="images/logo.png" alt="" width="290" height="39"
@@ -64,9 +64,9 @@
         </div>
       </nav>
       <!-- Banner Section -->
-      <section class="container">
+      <section class="banner-section">
         <div
-          class="banner-section d-flex justify-content-between align-items-center"
+          class="banner container d-flex justify-content-between align-items-center"
         >
           <div class="banner-title">
             <h1>
