--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="btn btn-success panguin-btn">
-              <i class="fa-solid fa-cart-shopping"></i>
-              BUY NOW
+            <div>
+              <a href="#" class="btn panguin-btn">
+                <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+              >
             </div>
           </div>
           <div class="banner-photo">
@@ -88,7 +89,75 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Woman Jacket Section -->
+      <section class="product-section container">
+        <h2>WOMAN JACKET</h2>
+        <div class="women-jacket">
+          <!-- Bootstrap Card -->
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/images/jacket-1.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Yellow Coat Jacket</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/images/jacket-2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Ladies Jacket</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="/images/jacket-3.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Woman Leather Jacket</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
 
