defiend card padding

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <!-- Bootstrap Card -->
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-              <div class="card">
+              <div class="card p-3">
                 <img
                   src="/images/jacket-1.png"
                   class="card-img-top"
