--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="card p-3">
                 <img
                   src="/images/jacket-1.png"
-                  class="card-img-top"
+                  class="card-img-top p-5"
                   alt="..."
                 />
                 <div class="card-body">
