defined card border-0 and card-img-top rounded-4

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
           <!-- Bootstrap Card -->
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-              <div class="card p-3">
+              <div class="card p-3 border-0">
                 <img
                   src="/images/jacket-1.png"
-                  class="card-img-top p-5"
+                  class="card-img-top p-5 rounded-4"
                   alt="..."
                 />
                 <div class="card-body">
