Defined card price color and font size

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     little bit longer.
                   </p>
                   <div class="d-flex justify-content-between">
-                    <p class="fs-3">$234</p>
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
                     <div>
                       <a href="#" class="btn panguin-btn">
                         <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
