--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
                 </div>
               </div>
             </div>
+
             <div class="col">
-              <div class="card">
+              <div class="card p-3 border-0">
                 <img
                   src="/images/jacket-2.png"
-                  class="card-img-top"
+                  class="card-img-top p-5 rounded-4"
                   alt="..."
                 />
                 <div class="card-body">
@@ -135,22 +136,40 @@
                     natural lead-in to additional content. This content is a
                     little bit longer.
                   </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+
             <div class="col">
-              <div class="card">
+              <div class="card p-3 border-0">
                 <img
                   src="/images/jacket-3.png"
-                  class="card-img-top"
+                  class="card-img-top p-5 rounded-4"
                   alt="..."
                 />
                 <div class="card-body">
                   <h3 class="card-title">Woman Leather Jacket</h3>
                   <p class="card-text">
                     This is a longer card with supporting text below as a
-                    natural lead-in to additional content.
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
                   </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
