--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
     <main>
       <!-- Woman Jacket Section -->
-      <section class="product-section container">
+      <section class="product-section container my-5">
         <h2>WOMAN JACKET</h2>
         <div class="women-jacket">
           <!-- Bootstrap Card -->
