Defined man jacket section

--- a/index.html
+++ b/index.html
@@ -176,6 +176,94 @@
           </div>
         </div>
       </section>
+
+      <!-- Man Jacket Section -->
+
+      <section class="product-section container my-5">
+        <h2>MAN JACKET</h2>
+        <div class="men-jacket">
+          <!-- Bootstrap Card -->
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card p-3 border-0">
+                <img
+                  src="/images/jacket-4.png"
+                  class="card-img-top p-5 rounded-4"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Snowboard Jacket Mens</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card p-3 border-0">
+                <img
+                  src="/images/jacket-5.png"
+                  class="card-img-top p-5 rounded-4"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Man Leather Jackets</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card p-3 border-0">
+                <img
+                  src="/images/jacket-6.png"
+                  class="card-img-top p-5 rounded-4"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h3 class="card-title">Man Casual Jackets</h3>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+                  <div class="d-flex justify-content-between">
+                    <p class="fs-3 fw-bold" style="color: #fabe4c">$234</p>
+                    <div>
+                      <a href="#" class="btn panguin-btn">
+                        <i class="fa-solid fa-cart-shopping"></i> BUY NOW</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
