Defined Help Section

--- a/index.html
+++ b/index.html
@@ -264,6 +264,50 @@
           </div>
         </div>
       </section>
+
+      <!-- Help Section -->
+      <section class="help-section container">
+        <div class="help d-flex justify-content-between">
+          <div class="help-insights">
+            <div class="help-insights-1 d-flex">
+              <div class="help-insights-icon">
+                <img src="/icons/image 12.png" width="78px" alt="" />
+              </div>
+              <div class="help-insights-text ms-4">
+                <h3>Find the Perfect Fit</h3>
+                <p>
+                  Everybody is different, which is why we offer styles for every
+                  body.
+                </p>
+              </div>
+            </div>
+            <div class="help-insights-2 d-flex my-5">
+              <div class="help-insights-icon">
+                <img src="/icons/image 13.png" width="78px" alt="" />
+              </div>
+              <div class="help-insights-text ms-4">
+                <h3>Free Exchanges</h3>
+                <p>One of the many reasons you can shop with peace of mind.</p>
+              </div>
+            </div>
+            <div class="help-insights-3 d-flex mt-5">
+              <div class="help-insights-icon">
+                <img src="/icons/image 14.png" width="78px" alt="" />
+              </div>
+              <div class="help-insights-text ms-4">
+                <h3>Contact Our Seller</h3>
+                <p>
+                  They are here to help you. That's quite literally what we pay
+                  them for.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="help-cover-photo">
+            <img src="/images/shopping.png" width="599px" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
