--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </section>
 
       <!-- Help Section -->
-      <section class="help-section container">
+      <!-- <section class="help-section container">
         <div class="help d-flex justify-content-between">
           <div class="help-insights">
             <div class="help-insights-1 d-flex">
@@ -305,6 +305,55 @@
           </div>
           <div class="help-cover-photo">
             <img src="/images/shopping.png" width="599px" alt="" />
+          </div>
+        </div>
+      </section> -->
+      <br /><br />
+      <!-- Help Section with Grid-Coloumn -->
+      <section class="help-section container">
+        <div class="row help d-flex justify-content-center">
+          <!-- First Coloum -->
+          <div class="col-12 col-md-6 help-insights">
+            <!-- Nesting Row -->
+            <div class="row help-insights-1 d-flex">
+              <div class="col-12 col-md-2 help-insights-icon">
+                <img src="/icons/image 12.png" width="78px" alt="" />
+              </div>
+              <div class="col-12 col-md-10 help-insights-text">
+                <h3>Find the Perfect Fit</h3>
+                <p>
+                  Everybody is different, which is why we offer styles for every
+                  body.
+                </p>
+              </div>
+            </div>
+            <!-- Nesting Row -->
+            <div class="row help-insights-1 d-flex justify-content-center my-5">
+              <div class="col-12 col-md-2 help-insights-icon">
+                <img src="/icons/image 13.png" width="78px" alt="" />
+              </div>
+              <div class="col-12 col-md-10 help-insights-text">
+                <h3>Free Exchanges</h3>
+                <p>One of the many reasons you can shop with peace of mind.</p>
+              </div>
+            </div>
+            <!-- Nesting Row -->
+            <div class="row help-insights-1 d-flex">
+              <div class="col-12 col-md-2 help-insights-icon">
+                <img src="/icons/image 14.png" width="78px" alt="" />
+              </div>
+              <div class="col-12 col-md-10 help-insights-text">
+                <h3>Contact Our Seller</h3>
+                <p>
+                  They are here to help you. That's quite literally what we pay
+                  them for.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Second Coloum -->
+          <div class="help-cover-photo col-12 col-md-6">
+            <img src="/images/shopping.png" width="100%" alt="" />
           </div>
         </div>
       </section>
