Responsive Design for Mobile

--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@
       <br /><br />
       <!-- Help Section with Grid-Coloumn -->
       <section class="help-section container">
-        <div class="row help d-flex justify-content-center">
+        <div class="row help d-flex">
           <!-- First Coloum -->
           <div class="col-12 col-md-6 help-insights">
             <!-- Nesting Row -->
-            <div class="row help-insights-1 d-flex">
+            <div class="row help-insights d-flex">
               <div class="col-12 col-md-2 help-insights-icon">
                 <img src="/icons/image 12.png" width="78px" alt="" />
               </div>
@@ -328,7 +328,7 @@
               </div>
             </div>
             <!-- Nesting Row -->
-            <div class="row help-insights-1 d-flex justify-content-center my-5">
+            <div class="row help-insights d-flex justify-content-center my-5">
               <div class="col-12 col-md-2 help-insights-icon">
                 <img src="/icons/image 13.png" width="78px" alt="" />
               </div>
@@ -338,7 +338,7 @@
               </div>
             </div>
             <!-- Nesting Row -->
-            <div class="row help-insights-1 d-flex">
+            <div class="row help-insights d-flex">
               <div class="col-12 col-md-2 help-insights-icon">
                 <img src="/icons/image 14.png" width="78px" alt="" />
               </div>
