Defined responsive banner, img and text-align for help section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="banner-photo">
-            <img src="images/model.png" alt="" />
+            <img src="images/model.png" width="100%" alt="" />
           </div>
         </div>
       </section>
